--- a/static/css/supplierPageStyle/_reviews.scss
+++ b/static/css/supplierPageStyle/_reviews.scss
@@ -43,10 +43,15 @@
         border-radius: 3vw;
         justify-content: center;
         font-size: 1.5vw;
+        overflow: hidden;
 
         @include mobile {
           width: 35vw;
           height: 35vw;
+        }
+
+        &__photo {
+          object-fit: contain;
         }
       }
     }
@@ -80,88 +85,27 @@
           font-size: 2vw;
         }
 
-        .reviews-text {
-          text-align: center;
+        .reviews-description__text {
+          max-height: 15vw;
+          overflow-y: scroll;
+
+          @include mobile {
+            max-height: 33vw;
+          }
+
+          &::-webkit-scrollbar {
+            display: block;
+            width: 0.5vw;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background-color: #00000040;
+            border-radius: 24px;
+          }
         }
       }
     }
   }
-  //.reviews-header {
-  //  display: flex;
-  //  align-items: center;
-  //  justify-content: space-between;
-  //
-  //  &__logo {
-  //    width: 11vw;
-  //    margin-left: 3.5vw;
-  //
-  //    @include mobile {
-  //      width: 23vw;
-  //      margin-left: 6.5vw;
-  //    }
-  //  }
-  //
-  //  &__description {
-  //    font-size: 1.5vw;
-  //    margin-right: 16vw;
-  //
-  //    @include mobile {
-  //      font-size: 4.5vw;
-  //      margin-right: 15vw;
-  //    }
-  //  }
-  //}
-
-  //.reviews-gift-and-description {
-  //  display: flex;
-  //
-  //  .reviews-gift {
-  //    display: flex;
-  //    width: 18vw;
-  //    height: 18vw;
-  //    background-color: #D9D9D9;
-  //    border-radius: 3vw;
-  //    justify-content: center;
-  //
-  //    @include mobile {
-  //      width: 35vw;
-  //      height: 35vw;
-  //    }
-  //
-  //    &__photo {
-  //      font-size: 1vw;
-  //
-  //      @include mobile {
-  //        font-size: 2vw;
-  //      }
-  //    }
-  //  }
-  //
-  //  .reviews-description-container {
-  //    display: flex;
-  //    flex-direction: column;
-  //    justify-content: space-between;
-  //    width: 69%;
-  //    padding-left: 5vw;
-  //    padding-right: 2vw;
-  //    line-height: 1.25;
-  //    font-size: 1vw;
-  //
-  //    @include mobile {
-  //      width: 59%;
-  //      font-size: 2vw;
-  //    }
-  //
-  //    .reviews-text {
-  //      padding-right: 12vw;
-  //
-  //      @include mobile {
-  //        padding-right: 0;
-  //      }
-  //    }
-  //  }
-  //}
-
   .reviews-comment-wrapper {
     display: flex;
     width: 100%;
